# Expression

./: CMakeLists.txt  README.md  main.cpp
headers/: Expression.h  Parser.h  Tokenator.h
realization/: Expression.cpp  Tokenator.cpp
tests/: CMakeLists.txt  tests.cpp
